@@ -11,7 +11,8 @@ import org.endeavourhealth.imapi.vocabulary.IM;
 import org.endeavourhealth.imapi.vocabulary.SNOMED;
 
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.*;
 
 public class ECLToIMQVisitor extends IMECLBaseVisitor<Object> {
@@ -78,19 +79,16 @@ public class ECLToIMQVisitor extends IMECLBaseVisitor<Object> {
         Object result = visit(child);
         if (result instanceof Prefixes asPrefixes) {
           prefixes = asPrefixes;
-          if (query == null)
+          if (query == null) {
             query = new Query();
+
+          }
           query.setPrefixes(prefixes);
         } else if (result instanceof Match match) {
-          if (query == null)
+          if (query == null) {
             query = new Query();
-          if (match.getBool() != null) {
-            if (match.getBool() == Bool.or) {
-              query.addMatch(match);
-            } else
-              copyMatchToQuery(match, query);
-          } else
-            copyMatchToQuery(match, query);
+          }
+          copyMatchToQuery(match, query);
         }
       }
     }
@@ -101,15 +99,14 @@ public class ECLToIMQVisitor extends IMECLBaseVisitor<Object> {
     if (match.getInstanceOf() != null) {
       query.setInstanceOf(match.getInstanceOf());
     }
-    if (match.isExclude())
-      query.setExclude(true);
-    if (match.getMatch() != null)
-      query.setMatch(match.getMatch());
+    if (match.getNot() != null)
+      query.setNot(match.getNot());
+    if (match.getAnd() != null)
+      query.setAnd(match.getAnd());
+    if (match.getOr() != null)
+      query.setOr(match.getOr());
     if (match.getWhere() != null)
       query.setWhere(match.getWhere());
-    if (match.getBool() != null) {
-      query.setBool(match.getBool());
-    }
     if (match.getTypeOf() != null && match.getTypeOf().getIri().equals(IM.CONCEPT)) {
       query.setTypeOf(match.getTypeOf());
     }
@@ -172,14 +169,15 @@ public class ECLToIMQVisitor extends IMECLBaseVisitor<Object> {
     if (ctx.children != null) {
       for (ParseTree child : ctx.children) {
         Object result = visit(child);
-        if (result instanceof Match asMatch)
+        if (result instanceof Match asMatch) {
           match = asMatch;
+        }
         else if (result instanceof Where asWhere) {
           if (match == null) {
             match = new Match();
             match.setTypeOf(new Node().setIri(IM.CONCEPT));
           }
-          match.addWhere(asWhere);
+          match.setWhere(asWhere);
         }
       }
     }
@@ -202,12 +200,11 @@ public class ECLToIMQVisitor extends IMECLBaseVisitor<Object> {
   @Override
   public Object visitConjunctionexpressionconstraint(IMECLParser.ConjunctionexpressionconstraintContext ctx) {
     Match match = new Match();
-    match.setBool(Bool.and);
     if (ctx.children != null) {
       for (ParseTree child : ctx.children) {
         Object result = visit(child);
         if (result instanceof Match asMatch)
-          match.addMatch(asMatch);
+          match.addAnd(asMatch);
       }
     }
     return match;
@@ -217,12 +214,11 @@ public class ECLToIMQVisitor extends IMECLBaseVisitor<Object> {
   @Override
   public Object visitDisjunctionexpressionconstraint(IMECLParser.DisjunctionexpressionconstraintContext ctx) {
     Match match = new Match();
-    match.setBool(Bool.or);
     if (ctx.children != null) {
       for (ParseTree child : ctx.children) {
         Object result = visit(child);
         if (result instanceof Match asMatch)
-          match.addMatch(asMatch);
+          match.addOr(asMatch);
       }
     }
     return match;
@@ -231,16 +227,14 @@ public class ECLToIMQVisitor extends IMECLBaseVisitor<Object> {
   @Override
   public Object visitExclusionexpressionconstraint(IMECLParser.ExclusionexpressionconstraintContext ctx) {
     Match match = new Match();
-    match.setBool(Bool.and);
     if (ctx.children != null) {
       for (ParseTree child : ctx.children) {
         Object result = visit(child);
         if (result instanceof Match asMatch) {
-          if (match.getMatch() == null)
-            match.addMatch(asMatch);
+          if (match.getAnd() == null)
+            match.addAnd(asMatch);
           else {
-            asMatch.setExclude(true);
-            match.addMatch(asMatch);
+            match.addNot(asMatch);
           }
         }
       }
@@ -351,10 +345,10 @@ public class ECLToIMQVisitor extends IMECLBaseVisitor<Object> {
     if (resolved == null) {
       try {
         // Creating a URL object from the given string
-        new URL(iriRef);
+        new URI(iriRef).toURL();
         // If no exception is thrown, the URL is valid
         resolved = iriRef;
-      } catch (MalformedURLException e) {
+      } catch (MalformedURLException | URISyntaxException e) {
         throw new IllegalStateException("invalid iri syntax in : " + iriRef);
       }
     }
@@ -452,12 +446,11 @@ public class ECLToIMQVisitor extends IMECLBaseVisitor<Object> {
   @Override
   public Object visitConjunctionrefinementset(IMECLParser.ConjunctionrefinementsetContext ctx) {
     Where where = new Where();
-    where.setBool(Bool.and);
     if (ctx.children != null) {
       for (ParseTree child : ctx.children) {
         Object result = visit(child);
         if (result instanceof Where asWhere) {
-          where.addWhere(asWhere);
+          where.addAnd(asWhere);
         }
       }
     }
@@ -467,12 +460,11 @@ public class ECLToIMQVisitor extends IMECLBaseVisitor<Object> {
   @Override
   public Object visitDisjunctionrefinementset(IMECLParser.DisjunctionrefinementsetContext ctx) {
     Where where = new Where();
-    where.setBool(Bool.or);
     if (ctx.children != null) {
       for (ParseTree child : ctx.children) {
         Object result = visit(child);
         if (result instanceof Where asWhere) {
-          where.addWhere(asWhere);
+          where.addOr(asWhere);
         }
       }
     }
@@ -507,12 +499,11 @@ public class ECLToIMQVisitor extends IMECLBaseVisitor<Object> {
   @Override
   public Object visitConjunctionattributeset(IMECLParser.ConjunctionattributesetContext ctx) {
     Where where = new Where();
-    where.setBool(Bool.and);
     if (ctx.children != null) {
       for (ParseTree child : ctx.children) {
         Object result = visit(child);
         if (result instanceof Where asWhere) {
-          where.addWhere(asWhere);
+          where.addAnd(asWhere);
         }
       }
     }
@@ -522,12 +513,11 @@ public class ECLToIMQVisitor extends IMECLBaseVisitor<Object> {
   @Override
   public Object visitDisjunctionattributeset(IMECLParser.DisjunctionattributesetContext ctx) {
     Where where = new Where();
-    where.setBool(Bool.or);
     if (ctx.children != null) {
       for (ParseTree child : ctx.children) {
         Object result = visit(child);
         if (result instanceof Where asWhere) {
-          where.addWhere(asWhere);
+          where.addOr(asWhere);
         }
       }
     }
@@ -552,13 +542,11 @@ public class ECLToIMQVisitor extends IMECLBaseVisitor<Object> {
   public Object visitEclattributegroup(IMECLParser.EclattributegroupContext ctx) {
     Where where = new Where();
     where.setIri(IM.ROLE_GROUP);
-    Match match = new Match();
-    where.setMatch(match);
     if (ctx.children != null) {
       for (ParseTree child : ctx.children) {
         Object result = visit(child);
         if (result instanceof Where asWhere) {
-          match.addWhere(asWhere);
+          where.addAnd(asWhere);
         }
       }
     }
@@ -578,7 +566,7 @@ public class ECLToIMQVisitor extends IMECLBaseVisitor<Object> {
         }
 
         if (result instanceof Match asMatch) {
-          Node node = (asMatch).getInstanceOf().get(0);
+          Node node = (asMatch).getInstanceOf().getFirst();
           if (where == null) {
             where = new Where();
             wheres.add(where);
